# COSMOS

./: README.md
COSMOS/: LICENSE  README.md  THIRD_PARTY.md  app.py  pyproject.toml  requirements.txt
COSMOS/docs/: REFERENCES.md  physics_explanations.md
COSMOS/modules/: ads_qcd_module.py  benchmarks_module.py  exoplanet_module.py  landscape_module.py
COSMOS/src/cosmos_workbench/astro/: synthetic.py
COSMOS/src/cosmos_workbench/astro/models/: cnn1d.py
COSMOS/src/cosmos_workbench/astro/utils/: calib.py
COSMOS/src/cosmos_workbench/holo/models/: softwall.py
COSMOS/src/cosmos_workbench/holo/solvers/: sl_fd.py
COSMOS/src/cosmos_workbench/landscape/data/: cicy_synth.py
COSMOS/src/cosmos_workbench/landscape/models/: gbm.py
COSMOS/static/: README.md  benchmarks_snapshot.csv
COSMOS/tests/: test_physics.py
COSMOS/utils/: reproducibility.py  session.py  telemetry.py  uncertainty.py
