[project]
name = "cosmos-workbench"
version = "1.2.0"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.36",
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "torch==2.2.2",
    "lightkurve>=2.4",
    "astropy>=6.0",
    "shap>=0.45.0",
    "streamlit-shap>=1.0.2",
    "mapie>=0.9.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
